# gax-kotlin

./: .bazelproject  .gcloudignore  .gitignore  .gitmodules  .project  BUILD.bazel  README.md  WORKSPACE  build.gradle  build.gradle.kts  cloudbuild.yaml  jitpack.yml  maven_install.json  settings.gradle  settings.gradle.kts
.circleci/: config.yml
.github/: sync-repo-settings.yaml
examples/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
examples-android/: .gitignore  build.gradle  settings.gradle
examples-android/app/: build.gradle
examples-android/app/src/main/: AndroidManifest.xml
examples-android/app/src/main/res/layout/: activity_main.xml
examples-android/gradle/wrapper/: gradle-wrapper.properties
examples/src/main/kotlin/example/: Main.kt
examples/src/main/kotlin/example/grpc/: Language.kt  Logging.kt  Speech.kt  SpeechStreaming.kt
gradle/wrapper/: gradle-wrapper.properties
kgax-core/: .classpath  .gitignore  .project  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
kgax-core/gradle/wrapper/: gradle-wrapper.properties
kgax-grpc/: .classpath  .project  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
kgax-grpc-android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
kgax-grpc-base/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
kgax-grpc-base/gradle/wrapper/: gradle-wrapper.properties
kgax-grpc-base/src/main/proto/google/bytestream/: bytestream.proto
kgax-grpc-examples/: .gitignore  build.gradle  gradle.properties  settings.gradle
kgax-grpc-examples/app/: build.gradle
kgax-grpc-examples/app/src/main/: AndroidManifest.xml
kgax-grpc-examples/gradle/wrapper/: gradle-wrapper.properties
kgax-grpc-netty/: .gitignore  build.gradle  settings.gradle
showcase-test/: build.gradle.kts  docker-compose.yaml  settings.gradle.kts
(+100 files in other folders)
